--- a/Aula_CSS/curriculo_materialize/css/curriculoM.css
+++ b/Aula_CSS/curriculo_materialize/css/curriculoM.css
@@ -6,3 +6,19 @@
     border: 2px solid;
     border-radius: 200px;
 }
+
+.dropdown-shows {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding-left: 1%;
+    padding-right: 1%;
+    border-radius: 2px;
+  }
+
+  .dropdown:hover .dropdown-shows {
+    display: block;
+  }
